@@ -49,6 +49,7 @@
         <input type="password" name="confirm_password" value=""/>
     </li>
     {% endblock %}
+    {% block groups %}
     <li>
         <label>
             {% trans %}groups:{% endtrans %}
@@ -64,5 +65,6 @@
             {% endfor %}
         </ul>
     </li>
+    {% endblock %}
 </ul>
 {% endblock %}
