@@ -1,0 +1,11 @@
+{% extends "/pyshop/account/create.html" %}
+
+{% block subnav %}
+    <h2>{{user.name}}</h2>
+{% endblock %}
+
+
+{% block password %}
+{% endblock %}
+{% block groups %}
+{% endblock %}
